# LaF-code

./: CMakeLists.txt  LaFCommon.cpp  LaFCommon.h  LaFParticipant.cpp  LaFParticipant.h  LaFServer.cpp  LaFServer.h  MuS.cpp  MuS.h  README.md  RunLaFClient.cpp  RunLaFServer.cpp  main.cpp  test_key_exchange.cpp
NewHope512cpa/: PQCgenKAT_kem.cpp  cpapke.cpp  fips202.cpp  fips202.h  kem.cpp  ntt.cpp  ntt.h  poly.h  precomp.cpp  reduce.h  rng.cpp  rng.h  verify.cpp  verify.h
